@@ -128,7 +128,7 @@
 		<SEQ TYPE="OPERATOR">+</SEQ>
 		<SEQ TYPE="OPERATOR">,</SEQ>
 
-		<KEYWORDS>
+		<KEYWORDS IGNORE_CASE="FALSE">
 			<KEYWORD1>CDATA</KEYWORD1>
 			<KEYWORD1>EMPTY</KEYWORD1>
 			<KEYWORD1>INCLUDE</KEYWORD1>
